<resources>
    <string name="app_name">RescueLink</string>
    <string name="sar_mode">SAR Mode</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_debug">DebugActivity</string>
    <string name="tag_age">Age: </string>
    <string name="tag_weight">Weight: </string>
    <string name="tag_heart_rate">HR: </string>
    <string name="tag_device_name">Dev: </string>
    <string name="unknown_device_name">Unknown Device</string>
    <string name="current_location">Current Location</string>
    <string name="possible_victim">Possible Victim</string>
    <string name="title_activity_info">UserInfoActivity</string>
    <string name="name_userinfo">Name</string>
    <string name="surname_userinfo">Surename</string>
    <string name="birthdate_userinfo">Date of birth</string>
    <string name="weight_userinfo">Weight</string>
    <string name="save_userinfo">Save</string>
    <string name="saved_message">Data Saved</string>
</resources>